--- a/Parte_0/0.4.md
+++ b/Parte_0/0.4.md
@@ -3,27 +3,16 @@ sequenceDiagram
     participant browser
     participant server
 
-    browser->>server: GET [https://studies.cs.helsinki.fi/exampleapp/notes](https://studies.cs.helsinki.fi/exampleapp/notes)
+    Note right of browser: El usuario ingresa texto como nueva nota en el <input> del formulario y lo envia con el <buttom type="sumbit" value="Save">.
+
+    browser->>server: "POST https://studies.cs.helsinki.fi/exampleapp/new_note"
+    
+    Note left of server: El servidor recibe los datos.
+    
+    browser->>server: "GET https://studies.cs.helsinki.fi/exampleapp/notes"
     activate server
-    server-->>browser: HTML document
+    server-->>browser: data.json
     deactivate server
 
-    browser->>server: GET [https://studies.cs.helsinki.fi/exampleapp/main.css](https://studies.cs.helsinki.fi/exampleapp/main.css)
-    activate server
-    server-->>browser: the css file
-    deactivate server
-
-    browser->>server: GET [https://studies.cs.helsinki.fi/exampleapp/main.js](https://studies.cs.helsinki.fi/exampleapp/main.js)
-    activate server
-    server-->>browser: the JavaScript file
-    deactivate server
-
-    Note right of browser: The browser starts executing the JavaScript code that fetches the JSON from the server
-
-    browser->>server: GET [https://studies.cs.helsinki.fi/exampleapp/data.json](https://studies.cs.helsinki.fi/exampleapp/data.json)
-    activate server
-    server-->>browser: [{ "content": "HTML is easy", "date": "2023-1-1" }, ... ]
-    deactivate server
-
-    Note right of browser: The browser executes the callback function that renders the notes
+    Note right of browser: El navegador actualiza la nueva nota ingresada en la pagina.
 ```
