Uploading 0.6.md file and updating 0.4.md file

--- a/Parte_0/0.6.md
+++ b/Parte_0/0.6.md
@@ -5,12 +5,12 @@ sequenceDiagram
 
     Note right of browser: El usuario ingresa texto como nueva nota en el <input> del formulario y lo envia con el <buttom type="sumbit" value="Save">.
 
-    browser->>server: "POST https://studies.cs.helsinki.fi/exampleapp/new_note"
+    browser->>server: "POST https://studies.cs.helsinki.fi/exampleapp/new_note_spa"
     activate server
     
     Note left of server: El servidor recibe los datos.
     
-    server-->>browser: new_note.html
+    server-->>browser: new_note_spa.json
     deactivate server
     
     browser->>server: "GET https://studies.cs.helsinki.fi/exampleapp/data.json"
